crates/general/fixtures/invalid/missing_field_after_access.zt
cfg ::= { server = { port = 8080; }; };
cfg.server.
